--- a/bump-timestamp-file.yml
+++ b/bump-timestamp-file.yml
@@ -13,4 +13,11 @@ outputs:
   - name: updated-gist
 
 run:
-  path: resource-tutorial/bump-timestamp-file.sh
+  path: bash
+  args:
+    - -e
+    - -c
+    - |
+      ls -l
+      set -o pipefail
+      chmod +x resource-tutorial/bump-timestamp-file.sh
