--- a/bump-timestamp-file.yml
+++ b/bump-timestamp-file.yml
@@ -15,8 +15,14 @@ run:
     - -c
     - |
       ls -l
-      set -o pipefail
-      chmod +x resource-tutorial/bump-timestamp-file.sh
       pwd
       ls -R
-      ../bump-timestamp-file.sh
+      PACKAGE_VERSION=$(cat package.json \
+      | grep version \
+      | head -1 \
+      | awk -F: '{ print $2 }' \
+      | sed 's/[",]//g' \
+      | tr -d '[[:space:]]')
+      echo $ PACKAGE_VERSION
+      git tag $PACKAGE_VERSION
+      git push --tags
