--- a/bump-timestamp-file.yml
+++ b/bump-timestamp-file.yml
@@ -3,7 +3,7 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: { repository: concourse/bosh-cli }
+  source: { repository: busybox }
 
 inputs:
   - name: resource-tutorial
