--- a/bump-timestamp-file.yml
+++ b/bump-timestamp-file.yml
@@ -18,6 +18,7 @@ run:
       pwd
       ls -R
       cd resource-tutorial
+      cat package.json
       PACKAGE_VERSION=$(cat package.json \
       | grep version \
       | head -1 \
