--- a/bump-timestamp-file.yml
+++ b/bump-timestamp-file.yml
@@ -18,4 +18,5 @@ run:
       pwd
       ls -R
       cd resource-tutorial
-      awk '/version/{gsub(/("|",)/,"",$2);print $2};' package.json
+      PACKAGE_VERSION=$(awk '/version/{gsub(/("|",)/,"",$2);print $2};' package.json)
+      echo $PACKAGE_VERSION
